--- a/index.html
+++ b/index.html
@@ -129,7 +129,20 @@
 
     <section>
       <div class="scrollable">
-        <h2 id="tip">Tip:</h2>
+        <h2 id="tip-console-access">Tip:</h2>
+        <p>We can access element instance of the latest inspected element by typing <code>$0</code> in the console.</p>
+        <p><code>$0</code> changes automatically to the selected element in the Elements Tab.</p>
+        <p>Older inspected elements can also be accessed like <code>$1, $2, ...</code></p>
+      </div>
+
+      <div>
+        <img alt="tip" src="images/bonus-tip-inspected-element-access.gif" />
+      </div>
+    </section>
+
+    <section>
+      <div class="scrollable">
+        <h2 id="tip-breadcrumbs">Tip:</h2>
         <p>We can access element instance of the latest inspected element by typing <code>$0</code> in the console.</p>
         <p><code>$0</code> changes automatically to the selected element in the Elements Tab.</p>
         <p>Older inspected elements can also be accessed like <code>$1, $2, ...</code></p>
@@ -207,8 +220,41 @@
     </section>
 
     <section>
+      <div class="scrollable">
+        <h2 id="tip-changes">Tip:</h2>
+        <p>Changes Tab</p>
+      </div>
+
+      <div>
+        <img alt="tip" src="images/bonus-tip-inspected-element-access.gif" />
+      </div>
+    </section>
+
+    <section>
       <main>
-        <h2>Edit DOM</h2>
+        <h2 id="layouts">Elements Tab: Layouts</h2>
+
+      </main>
+      <aside>
+        <h3>Edit DOM</h3>
+
+      </aside>
+    </section>
+
+    <section>
+      <main>
+        <h2 id="layouts">Elements Tab: Animations</h2>
+
+      </main>
+      <aside>
+        <h3>Edit DOM</h3>
+
+      </aside>
+    </section>
+
+    <section>
+      <main>
+        <h2 id="layouts">Elements Tab: Rendering</h2>
 
       </main>
       <aside>
