--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Elements Tab | Dev Tools</title>
   <link rel="stylesheet" href="./index.css" />
 </head>
 
 <body>
   <div class="snap-container">
-    <section>
+    <!-- <section>
       <div>
         <h1>Dev Tools: The Elements Tab</h1>
         <h2>UI Meetup, 12<sup>th</sup> July 2021</h2>
@@ -129,7 +129,7 @@
 
     <section>
       <div class="scrollable">
-        <h2 id="tip-console-access">Tip:</h2>
+        <h2 id="tip-console-access">Tip: Access Inspected Element in Console </h2>
         <p>We can access element instance of the latest inspected element by typing <code>$0</code> in the console.</p>
         <p><code>$0</code> changes automatically to the selected element in the Elements Tab.</p>
         <p>Older inspected elements can also be accessed like <code>$1, $2, ...</code></p>
@@ -138,18 +138,28 @@
       <div>
         <img alt="tip" src="images/bonus-tip-inspected-element-access.gif" />
       </div>
-    </section>
+    </section> -->
 
     <section>
       <div class="scrollable">
-        <h2 id="tip-breadcrumbs">Tip:</h2>
-        <p>We can access element instance of the latest inspected element by typing <code>$0</code> in the console.</p>
-        <p><code>$0</code> changes automatically to the selected element in the Elements Tab.</p>
-        <p>Older inspected elements can also be accessed like <code>$1, $2, ...</code></p>
+        <h2 id="tip-breadcrumbs">
+          Tip: Navigate through the Hierarchy Using Breadcrumbs
+        </h2>
+        <p>
+          To go to the parent of the inspected element it is very helpful to
+          use breadcrumbs especially when
+        </p>
+        <ul>
+          <li>
+            there are many children to the parent (which makes us scroll more
+            to reach the parent)
+          </li>
+          <li>hierarchy is too deep</li>
+        </ul>
       </div>
 
       <div>
-        <img alt="tip" src="images/bonus-tip-inspected-element-access.gif" />
+        <img alt="tip" src="images/breadcrumbs.png" />
       </div>
     </section>
 
@@ -159,43 +169,45 @@
 
         <p class="hoverable quote">Hover on me to see a custom tooltip.</p>
       </main>
-      <aside class="carousel" style="--current-item:0">
-        <div style="--item:0">
+      <aside class="carousel" style="--current-item: 0">
+        <div style="--item: 0">
           <h3>Break on subtree modifications</h3>
           <p class="quote">
-            This allows us to pause the execution on any subtree modifications such as node adds/removals.
+            This allows us to pause the execution on any subtree modifications
+            such as node adds/removals.
           </p>
 
           <p>
-            This tooltip here is added to document body when hovered on the element and removed from it immediately
-            after we move away from the hovered element. In this
-            situation, to inspect the tooltip or to know which code adds or removes the tooltip, we can set a subtree
-            modifications breakpoint on the body.
+            This tooltip here is added to document body when hovered on the
+            element and removed from it immediately after we move away from
+            the hovered element. In this situation, to inspect the tooltip or
+            to know which code adds or removes the tooltip, we can set a
+            subtree modifications breakpoint on the body.
           </p>
           <img alt="edit content" src="images/break-on-subtree-mods.png" />
         </div>
 
-        <div style="--item:1">
+        <div style="--item: 1">
           <h3>More breaking options</h3>
-          <p>
-            In addition to subtree modifications we also have
-          </p>
+          <p>In addition to subtree modifications we also have</p>
           <ul>
-            <li><em>attribute modifications</em> - which allows us to break on attribute changes such as a class got
-              added
-              to the
-              clnode removal, etc</li>
-            <li><em>node removal</em> - which breaks when the current node on which the breakpoint is going to be
-              removed
-              from the
-              DOM</li>
+            <li>
+              <em>attribute modifications</em> - which allows us to break on
+              attribute changes such as a class got added to the clnode
+              removal, etc
+            </li>
+            <li>
+              <em>node removal</em> - which breaks when the current node on
+              which the breakpoint is going to be removed from the DOM
+            </li>
           </ul>
           <img alt="edit content" src="images/break-on-subtree-mods.png" />
         </div>
 
-        <div style="--item:2">
+        <div style="--item: 2">
           <p>
-            We can see the list of all these breakpoints in "DOM Breakpoints" tab.
+            We can see the list of all these breakpoints in "DOM Breakpoints"
+            tab.
           </p>
 
           <img alt="edit content" src="images/dom-breakpoints-list.png" />
@@ -211,11 +223,9 @@
     <section>
       <main>
         <h2 id="edit-styles">Elements Tab: Edit Styles</h2>
-
       </main>
       <aside>
         <h3>Edit DOM</h3>
-
       </aside>
     </section>
 
@@ -233,33 +243,27 @@
     <section>
       <main>
         <h2 id="layouts">Elements Tab: Layouts</h2>
-
       </main>
       <aside>
         <h3>Edit DOM</h3>
-
       </aside>
     </section>
 
     <section>
       <main>
         <h2 id="layouts">Elements Tab: Animations</h2>
-
       </main>
       <aside>
         <h3>Edit DOM</h3>
-
       </aside>
     </section>
 
     <section>
       <main>
         <h2 id="layouts">Elements Tab: Rendering</h2>
-
       </main>
       <aside>
         <h3>Edit DOM</h3>
-
       </aside>
     </section>
   </div>
