--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="snap-container">
-    <!-- <section>
+    <section>
       <div>
         <h1>Dev Tools: The Elements Tab</h1>
         <h2>UI Meetup, 12<sup>th</sup> July 2021</h2>
@@ -138,7 +138,7 @@
       <div>
         <img alt="tip" src="images/bonus-tip-inspected-element-access.gif" />
       </div>
-    </section> -->
+    </section>
 
     <section>
       <div class="scrollable">
@@ -223,10 +223,83 @@
     <section>
       <main>
         <h2 id="edit-styles">Elements Tab: Edit Styles</h2>
+
+        <button class="btn">My Button!</button>
       </main>
-      <aside>
-        <h3>Edit DOM</h3>
+      <aside class="carousel" style="--current-item: 0">
+        <div style="--item: 0">
+          <h3>Edit Styles</h3>
+          <p class="quote">
+            Styles Tab allows us to edit styles to test different combinations until we are satisfied with output.
+          </p>
+
+          <p>
+            Let's say we want to tweak the <code>border-radius</code> of the button, we can find it under
+            <code>.btn</code> class in the Styles Tab.
+          </p>
+
+          <img alt="edit styles" src="images/edit-styles.png" />
+        </div>
+
+        <div style="--item: 1">
+          <h3>Add Styles</h3>
+          <p class="quote">
+            We also can add new styles to the element.
+          </p>
+
+          <p>
+            Click on the negative space beside <code>.btn</code> class styles. This will add an empty text area under it
+            to allow us to add a new style property for that class. Let's add the following.
+          </p>
+
+          <code>
+            border: 0;
+          </code>
+
+          <img alt="add styles" src="images/add-styles.png" />
+          <img alt="add styles" src="images/add-styles-1.png" />
+        </div>
+
+        <div style="--item: 2">
+          <h3>Add Pseudo States</h3>
+          <p class="quote">
+            Allows us to add/edit pseudo states (such as <code>:hover</code>,
+            <code>:visited</code>) for an element.
+          </p>
+
+          <p>
+            While the button is selected in the Elements Tab, click on + (New
+            Style Rule) button and edit
+            <code>button.btn</code> class name that has been added, to
+            <code>.btn:hover</code> and hit Tab key. Add the following under
+            that hover state style rule.
+          </p>
+
+          <code>background: var(--default-dark-color);</code>
+
+          <img alt="add pseudo state" src="images/add-pseudo.png" />
+          <img alt="add pseudo state" src="images/add-pseudo-1.png" />
+        </div>
+
+        <nav class="carousel-nav">
+          <button class="prev">&larr;</button>
+          <button class="next">&rarr;</button>
+        </nav>
       </aside>
+    </section>
+
+    <section>
+      <div class="scrollable">
+        <h2 id="tip-inspector-stylesheet">Tip: Inspector Stylesheet</h2>
+        <p>
+          Any added styles (ex. hover state that we have added for the
+          <code>.btn</code> class) can be found in the temporary <em>inspector stylesheet</em> that the browser creates.
+        </p>
+      </div>
+
+      <div>
+        <img alt="tip" src="images/tip-inspector-stylesheet.gif" />
+      </div>
     </section>
 
     <section>
