--- a/index.html
+++ b/index.html
@@ -281,6 +281,27 @@
           <img alt="add pseudo state" src="images/add-pseudo-1.png" />
         </div>
 
+        <div style="--item: 3">
+          <h3>Add class</h3>
+          <p class="quote">
+            Allows us to add/edit pseudo states (such as <code>:hover</code>,
+            <code>:visited</code>) for an element.
+          </p>
+
+          <p>
+            While the button is selected in the Elements Tab, click on + (New
+            Style Rule) button and edit
+            <code>button.btn</code> class name that has been added, to
+            <code>.btn:hover</code> and hit Tab key. Add the following under
+            that hover state style rule.
+          </p>
+
+          <code>background: var(--default-dark-color);</code>
+
+          <img alt="add pseudo state" src="images/add-pseudo.png" />
+          <img alt="add pseudo state" src="images/add-pseudo-1.png" />
+        </div>
+
         <nav class="carousel-nav">
           <button class="prev">&larr;</button>
           <button class="next">&rarr;</button>
@@ -299,6 +320,19 @@
 
       <div>
         <img alt="tip" src="images/tip-inspector-stylesheet.gif" />
+      </div>
+    </section>
+
+    <section>
+      <div class="scrollable">
+        <h2 id="tip-toggle-pseudo-states">Tip: Toggle Pseudo States</h2>
+        <p>
+          We can toggle different pseudo states on an element using the <strong>:hov</strong> button.
+        </p>
+      </div>
+
+      <div>
+        <img alt="tip" src="images/tip-toggle-pseudo-states.gif" />
       </div>
     </section>
 
