Add tip changes tab

--- a/index.html
+++ b/index.html
@@ -338,12 +338,12 @@
 
     <section>
       <div class="scrollable">
-        <h2 id="tip-changes">Tip:</h2>
-        <p>Changes Tab</p>
+        <h2 id="tip-changes">Tip: Changes Tab</h2>
+        <p>The Changes Tab helps us see all the changes we have done to existing CSS in one place as a diff.</p>
       </div>
 
       <div>
-        <img alt="tip" src="images/bonus-tip-inspected-element-access.gif" />
+        <img alt="tip" src="images/tip-changes.gif" />
       </div>
     </section>
 
