--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elements Tab | Dev Tools</title>
+    <title>Elements Panel | Dev Tools</title>
     <link rel="stylesheet" href="./index.css" />
   </head>
 
   <body>
     <div class="snap-container">
-      <!-- <section>
+      <section>
         <div>
-          <h1>Dev Tools: The Elements Tab</h1>
+          <h1>Dev Tools: The Elements Panel</h1>
           <h2>UI Meetup, 12<sup>th</sup> July 2021</h2>
           <h4>
             By Phani Rahul Sivalenka
@@ -26,12 +26,12 @@
             description pane.
           </p>
         </div>
-        <img alt="Elements Tab" src="images/elements-tab.png" />
+        <img alt="Elements Panel" src="images/elements-panel.png" />
       </section>
 
       <section>
         <main>
-          <h2 id="edit-dom">Elements Tab: Edit DOM</h2>
+          <h2 id="edit-dom">Elements Panel: Edit DOM</h2>
 
           <ul class="nav">
             <li>
@@ -53,14 +53,14 @@
           <div style="--item: 0">
             <h3>Edit Content</h3>
             <p class="quote">
-              Elements Tab allows us to edit the content of any DOM node.
+              Elements Panel allows us to edit the content of any DOM node.
             </p>
             <p>
               We can check the overflow behavior of the nav bar item (<code
                 >li</code
               >
               element) on the left by editing its <code>.text</code> content in
-              the Elements tab.
+              the Elements panel.
             </p>
             <img alt="edit content" src="images/edit-content.png" />
             <img alt="edit content" src="images/edit-content-long-text.png" />
@@ -143,7 +143,7 @@
           </p>
           <p>
             <code>$0</code> changes automatically to the selected element in the
-            Elements Tab.
+            Elements Panel.
           </p>
           <p>
             Older inspected elements can also be accessed like
@@ -181,7 +181,7 @@
 
       <section>
         <main>
-          <h2 id="dom-breakpoints">Elements Tab: DOM Breakpoints</h2>
+          <h2 id="dom-breakpoints">Elements Panel: DOM Breakpoints</h2>
 
           <p class="hoverable quote">Hover on me to see a custom tooltip.</p>
         </main>
@@ -223,7 +223,7 @@
           <div style="--item: 2">
             <p>
               We can see the list of all these breakpoints in "DOM Breakpoints"
-              tab.
+              panel.
             </p>
 
             <img alt="edit content" src="images/dom-breakpoints-list.png" />
@@ -238,7 +238,7 @@
 
       <section>
         <main>
-          <h2 id="edit-styles">Elements Tab: Edit Styles</h2>
+          <h2 id="edit-styles">Elements Panel: Edit Styles</h2>
 
           <button class="btn">My Button!</button>
         </main>
@@ -246,14 +246,14 @@
           <div style="--item: 0">
             <h3>Edit Styles</h3>
             <p class="quote">
-              Styles Tab allows us to edit styles to test different combinations
+              Styles Panel allows us to edit styles to test different combinations
               until we are satisfied with output.
             </p>
 
             <p>
               Let's say we want to tweak the <code>border-radius</code> of the
               button, we can find it under <code>.btn</code> class in the Styles
-              Tab.
+              Panel.
             </p>
 
             <img alt="edit styles" src="images/edit-styles.png" />
@@ -283,10 +283,10 @@
             </p>
 
             <p>
-              While the button is selected in the Elements Tab, click on + (New
+              While the button is selected in the Elements Panel, click on + (New
               Style Rule) button and edit
               <code>button.btn</code> class name that has been added, to
-              <code>.btn:hover</code> and hit Tab key. Add the following under
+              <code>.btn:hover</code> and hit Panel key. Add the following under
               that hover state style rule.
             </p>
 
@@ -304,7 +304,7 @@
 
             <p>
               Add a new class by clicking <strong>.cls</strong> button under
-              Styles Tab and typing in the new class name. For our button you
+              Styles Panel and typing in the new class name. For our button you
               can type <code>primary</code> as the class name and hit Enter to
               ad that class.
             </p>
@@ -381,9 +381,9 @@
 
       <section>
         <div class="scrollable">
-          <h2 id="tip-changes">Tip: Changes Tab</h2>
+          <h2 id="tip-changes">Tip: Changes Panel</h2>
           <p>
-            The Changes Tab helps us see all the changes we have done to
+            The Changes Panel helps us see all the changes we have done to
             existing CSS in one place as a diff.
           </p>
         </div>
@@ -396,7 +396,7 @@
       <section>
         <div class="scrollable">
           <h2 id="tip-changes">Tip: Computed Styles</h2>
-          <p>The Computed Tab gives us the following capabilities.</p>
+          <p>The Computed Panel gives us the following capabilities.</p>
           <ul>
             <li>Box model visualization</li>
             <li>Final computed value of each CSS property</li>
@@ -409,13 +409,33 @@
         </div>
 
         <div>
-          <img alt="tip" src="images/computed-tab.gif" />
+          <img alt="tip" src="images/computed-panel.gif" />
         </div>
-      </section> -->
-<!-- 
+      </section>
+
+      <section>
+        <div class="scrollable">
+          <h2 id="tip-shorthand-props">Tip: Shortcut Properties</h2>
+
+          <p>
+            When using shorthand CSS properties such as <code>background</code>,
+            the Styles panel shows on expansion all the lower level properties
+            with their assigned values based on the shorthand property value.
+          </p>
+        </div>
+
+        <div>
+          <img
+            alt="shorthand properties"
+            src="images/tip-shorthand-properties.png"
+          />
+        </div>
+      </section>
+
+      
       <section>
         <main>
-          <h2 id="layouts">Elements Tab: Layouts</h2>
+          <h2 id="layouts">Elements Panel: Layouts</h2>
 
           <div class="card">
             <div class="card-avatar"></div>
@@ -476,13 +496,13 @@
           </div>
 
           <div style="--item: 2">
-            <h3>Layout Tab</h3>
+            <h3>Layout Panel</h3>
             <p class="quote">
               All the layouts (flex and grid) that are available on the DOM can
-              be viewed in the <em>Layout</em> Tab.
+              be viewed in the <em>Layout</em> Panel.
             </p>
 
-            <p>This tab also allows us to</p>
+            <p>This panel also allows us to</p>
 
             <ul>
               <li>
@@ -499,7 +519,7 @@
               </li>
             </ul>
 
-            <img alt="layout tab" src="images/layout-tab.png" />
+            <img alt="layout panel" src="images/layout-panel.png" />
 
             <p>
               Toggle the grid layout of the <code>.card</code> to see the layout
@@ -508,7 +528,7 @@
               to improve visibility.
             </p>
 
-            <img alt="layout tab" src="images/grid-visualization.png" />
+            <img alt="layout panel" src="images/grid-visualization.png" />
           </div>
 
           <nav class="carousel-nav">
@@ -516,23 +536,100 @@
             <button class="next">&rarr;</button>
           </nav>
         </aside>
-      </section> -->
-
-      <section>
-        <main>
-          <h2 id="layouts">Elements Tab: Animations</h2>
-        </main>
-        <aside>
-          <h3>Edit DOM</h3>
-        </aside>
       </section>
 
       <section>
         <main>
-          <h2 id="layouts">Elements Tab: Rendering</h2>
+          <h2 id="layouts">Elements Panel: Animations</h2>
+
+          <div class="eyes">
+            <div class="eye">
+              <div class="eye-lid"></div>
+              <div class="eye-ball"></div>
+            </div>
+            <div class="eye">
+              <div class="eye-lid"></div>
+              <div class="eye-ball"></div>
+            </div>
+          </div>
         </main>
-        <aside>
-          <h3>Edit DOM</h3>
+        <aside class="carousel" style="--current-item: 0">
+          <div style="--item: 0">
+            <div class="quote">
+              <p>The Animations panel allows us to</p>
+              <ul>
+                <li>
+                  inspect animations by slowing them down, replaying them, or
+                  viewing their source code.
+                </li>
+                <li>
+                  modify animations by changing their timing, delay, duration,
+                  or keyframe offsets.
+                </li>
+              </ul>
+            </div>
+
+            <img alt="animations panel" src="images/animations-panel.png" />
+
+            <p>
+              Tweak the marked handles on one of the eye ball by moving them on
+              the timeline and see what happens.
+            </p>
+          </div>
+
+          <nav class="carousel-nav">
+            <button class="prev">&larr;</button>
+            <button class="next">&rarr;</button>
+          </nav>
+        </aside>
+      </section>
+
+      <section>
+        <div class="scrollable" style="max-width: 50%">
+          <h2 id="tip-console-access">Tip: GUI CSS Property Editors</h2>
+          <p>
+            Chrome dev tools provides GUI editors for some of the properties
+            such as color, easing, flexbox layout, etc which can be quite
+            beneficial while tweaking those properties.
+          </p>
+        </div>
+
+        <div class="tools-collage">
+          <img alt="tip color tool" src="images/color-tool.png" />
+          <img alt="tip easing tool" src="images/easing-tool.png" />
+          <img alt="tip flex tool" src="images/flex-tool.png" />
+        </div>
+      </section>
+
+      <section>
+        <main>
+          <h2 id="layouts">Elements Panel: Rendering</h2>
+
+          <div class="dark-switch">
+            <pre>
+Spiderman, Spiderman!
+Does whatever a spider he can.
+Spins a web any size,
+Catches thieves, just like flies.
+Look out! Here comes the Spiderman!
+            </p>
+          </div>
+        </main>
+
+        <aside class="carousel">
+          <div>
+            <p>
+              We can emulate various aspects of user preferences, vision
+              deficiencies, etc.
+            </p>
+
+            <p>
+              Also there are other tools to visualize paints and rendering of
+              the DOM.
+            </p>
+
+            <img alt="Rendering Panel" src="images/rendering-panel.png" />
+          </div>
         </aside>
       </section>
     </div>
