Add a thank you and fonts editor

--- a/index.html
+++ b/index.html
@@ -598,6 +598,7 @@
           <img alt="tip color tool" src="images/color-tool.png" />
           <img alt="tip easing tool" src="images/easing-tool.png" />
           <img alt="tip flex tool" src="images/flex-tool.png" />
+          <img alt="tip font tool" src="images/font-tool.png" />
         </div>
       </section>
 
@@ -631,6 +632,12 @@ Look out! Here comes the Spiderman!
             <img alt="Rendering Panel" src="images/rendering-panel.png" />
           </div>
         </aside>
+      </section>
+
+      <section class="thank-you">
+        <p>
+          Thank You
+        </p>
       </section>
     </div>
 
